--- a/templates/home.html
+++ b/templates/home.html
@@ -51,15 +51,16 @@
               <span class="text-muted">{{ msg.timestamp.strftime('%d %B %Y') }}</span>
               <p>{{ msg.text }}</p>
             </div>
-            <form method="POST" action="/users/add_like/{{ msg.id }}" id="messages-form">
+            <form method="POST" action="/messages/{{ msg.id }}/like" class="messages-like" id="messages-form">
+              <a href="">{{ msg.user.likes | length }}</a>
               <button class="
-                btn 
-                btn-sm 
-                {{'btn-primary' if msg.id in likes else 'btn-secondary'}}"
+              btn 
+              btn-sm 
+              {{'btn-primary' if msg.id in likes else 'btn-secondary'}}"
               >
-                <i class="fa fa-thumbs-up"></i> 
-              </button>
-            </form>
+              <i class="fa fa-thumbs-up"></i> 
+            </button>
+          </form>
           </li>
         {% endfor %}
       </ul>
