--- a/templates/home.html
+++ b/templates/home.html
@@ -51,8 +51,7 @@
               <span class="text-muted">{{ msg.timestamp.strftime('%d %B %Y') }}</span>
               <p>{{ msg.text }}</p>
             </div>
-            <form method="POST" action="/messages/{{ msg.id }}/like" class="messages-like" id="messages-form">
-              <a href="">{{ msg.user.likes | length }}</a>
+            <form action="/messages/{{ msg.id }}/like" id="messages-form" method="POST">
               <button class="
               btn 
               btn-sm 
