--- a/templates/users/followers.html
+++ b/templates/users/followers.html
@@ -2,7 +2,7 @@
 
 {% block user_details %}
   <div class="col-sm-9">
-    <div class="row">
+    <div class="row users-following">
 
       {% for follower in user.followers %}
 
